<resources>
    <string name="app_name">FishCheck</string>
    <string name="logo">Logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="tidak_punya_akun">Tidak Punya Akun?</string>
    <string name="nama">Nama</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="daftar">Daftar</string>
    <string name="temukan_akun_anda_melalui_email">Temukan Akun Anda Melalui Email</string>
    <string name="reset_password">Reset Password</string>

    <string name="scan">Scan</string>
    <string name="news">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="bantuan">Bantuan</string>
    <string name="logout">Logout</string>
    <string name="pusat_notifikasi">Pusat Notifikasi</string>
    <string name="start">Start</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="riwayat">Riwayat</string>
    <string name="pengaturan_profil">Pengaturan Profil</string>
    <string name="simpan">Simpan</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="hapus_gambar">Hapus Gambar</string>
    <string name="update_password">Update Password</string>
    <string name="password_baru">Password Baru</string>
    <string name="silahkan_isi_form_berikut">Silahkan Isi Form Berikut</string>
</resources>
