<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/profile"/>
        <item
            android:id="@+id/nav_history"
            android:title="@string/riwayat"
            android:icon="@drawable/history"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/pengaturan"
            android:icon="@drawable/settings"/>
        <item
            android:id="@+id/nav_bantuan"
            android:title="@string/bantuan"
            android:icon="@drawable/help"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>



</menu>
